--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -92,9 +92,7 @@
             <img
               src="./images/section/technical3.jpg"
               alt="technical"
-              width
-              width=""
-              360<
+              width="360"
               height="300"
             />
           </li>
