--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
       <!-- Section 1 -->
       <section>
+        <h2>Skills</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -145,15 +146,15 @@
           </li>
         </ul>
       </section>
-
-      <!-- Footer -->
-      <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </footer>
     </main>
+
+    <!-- Footer -->
+    <footer>
+      <a href="./index.html">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
